# oxideav-vorbis

./: CHANGELOG.md  Cargo.toml  LICENSE  NOTICES  README.md  TRAINING_CORPUS.md
benches/: vorbis.rs
examples/: check_decoded_wav.rs  decode_sine.rs  encode_sine_ogg.rs  encode_wav.rs
scripts/: fetch-vq-corpus.sh
src/: audio.rs  audio_packet.rs  bitreader.rs  bits_ext.rs  blocksize.rs  book_design.rs  channel_order.rs  codebook.rs  codebook_bank.rs  codebook_optimizer.rs  comment.rs  dbtable.rs  decoder.rs  encoder.rs  floor.rs  floor0.rs  floor0_encode.rs  floor0_encoder.rs  floor0_envelope.rs  floor0_layout.rs  floor0_lsp.rs  floor1.rs  floor1_encode.rs  floor1_envelope.rs  floor1_layout.rs  framing.rs  huffman.rs  identification.rs  imdct.rs  lib.rs  mdct.rs  ogg.rs  oggfile.rs  oggmux.rs  overlap.rs  packet.rs  packet_kind.rs  psy.rs  quality.rs  residue.rs  (+10 more)
src/simd/: chunked.rs  dispatch.rs  mod.rs  portable.rs  scalar.rs
tests/: audio_packet_trace_conformance.rs  banded_residue_books.rs  chained_stream_decode.rs  codebook_optimizer_size.rs  comment_header_decode.rs  decode_robustness.rs  docs_corpus.rs  encode_decode_roundtrip.rs  encoder_quality_headroom.rs  fixture_pcm_decode.rs  fixture_reencode.rs  floor0_audio_packet_decode.rs  floor0_curve_roundtrip.rs  floor0_envelope_roundtrip.rs  floor0_pcm_roundtrip.rs  floor0_trained_books.rs  floor1_designed_header_roundtrip.rs  floor1_envelope_roundtrip.rs  floor1_trained_books.rs  multidim_residue_books.rs  nonflat_floor_pcm_roundtrip.rs  ogg_block_switching.rs  ogg_coupled_stream.rs  ogg_encode_roundtrip.rs  ogg_framing.rs  ogg_vorbis_remux.rs  overlap_add_geometry.rs  parse_real_setup.rs  pcm_adaptive_residue_roundtrip.rs  pcm_packet_roundtrip.rs  psy_encode_roundtrip.rs  psy_temporal_masking.rs  quality_rate_curve.rs  rate_distortion_residue_roundtrip.rs  registry_wiring.rs  residue_cascade_roundtrip.rs  residue_format0_roundtrip.rs  residue_format2_roundtrip.rs  residue_trained_books.rs  setup_header_trace_conformance.rs  (+4 more)
