[package]
name = "oxideav-vorbis"
version = "0.0.7"
edition = "2021"
rust-version = "1.80"
license = "MIT AND BSD-3-Clause"
repository = "https://github.com/OxideAV/oxideav-vorbis"
authors = ["Mark Karpeles"]
description = "Vorbis I audio codec for oxideav — full decoder plus mono/stereo encoder, pure Rust"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-vorbis"
keywords = ["multimedia", "audio", "vorbis", "ogg", "codec"]
categories = ["multimedia::encoding", "multimedia::audio"]

[features]
default = []
# Enables `#![feature(portable_simd)]` and the `std::simd` code paths in
# `src/simd/portable.rs`. Requires a nightly toolchain. The default build
# relies on chunked-array loops that LLVM auto-vectorises reliably on
# stable.
nightly = []

[dependencies]
oxideav-core = "0.1"

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
# Used by tests/docs_corpus.rs to demux the .ogg input fixtures from
# docs/audio/vorbis/fixtures/ before feeding the per-stream Vorbis
# packets to our decoder.
oxideav-ogg = "0.1"

[[bench]]
name = "vorbis"
harness = false
